# PrivatBank-Exchange-Rate-WebSocket-App

./: .gitignore  README.md  exchange_service_console.py  index.html  main.js  pyproject.toml  requirements.txt  server.py  style.css
